# any-old-crap

./: .gitignore  LICENSE.md  README.md  fine_tuning_job_id.txt  pyproject.toml
data/: control_fine_tuning.jsonl  seed_examples.jsonl
data/logs/4.1_nano_base_20250827_161606/: responses.jsonl
data/logs/4.1_nano_finetuned_20250827_161638/: responses.jsonl
src/any_old_crap/: __init__.py
src/any_old_crap/scripts/: 1_fine_tune.py  2_query_models.py  3_evaluate_responses.py  4_analyse_data.py  analyse_data.py  evaluate_responses.py  fine_tuning.py  query_models.py  question_models.py
