[project]
name = "any-old-crap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan", email = "jonathan.d.bostock@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.102.0",
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
